Prohibit “do” and “if” as nonsense identifiers
Dict update had applied ≥3 char to Java reserved words as well as dict; should apply to dict only